tests/solidity/bad/onlytests.sol
contract Abstract {
  function echidna_f() pure public returns (bool) {return false;}
}
